--- a/guides/lvling/adventurer.html
+++ b/guides/lvling/adventurer.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-16 Wed 18:21 -->
+<!-- 2022-03-21 Mon 13:17 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Leveling Your Bone-fide Adventurer</title>
@@ -219,13 +219,13 @@ Footer" />
     </div>
   </nav>
   <header>
-    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/announcement-general_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
+    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/event_forestday_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
       <div class="container newsbox">
       <div class="row">
         <div class="col-12">
-          <h1 class="text-center">St. Patrick's Day must be celebrated!</h1>
-          <p class="text-center">...with a server boost!</p>
-          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/server-boost-754" target="new" role="button">Learn more</a></p>
+          <h1 class="text-center">Celebrate #InternationalDayofForests !</h1>
+          <p class="text-center">Show us your favorite Forest and win goodies!</p>
+          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/international-forest-day-437" target="new" role="button">Learn more</a></p>
         </div>
       </div>
       </div>
@@ -286,7 +286,7 @@ There are actually quite a few reps here, including one that a lot of
 people will probably tell you about where you just go and gather a
 special type of wood. This rep is slow, very slow, without droppers and
 the rest of the reps are also pretty slow, so you can look em up in the
-[[][Fiesta Wiki]] if you&rsquo;d like, but I prefer to just run around and
+<a href="http://fiesta-wiki.com/quests/8">Fiesta Wiki</a> if you&rsquo;d like, but I prefer to just run around and
 quest here. There are lots of quests you have saved to this point and
 they should be more than enough to get you to 125. Also, there is the
 Bajou Sancturary KQ, so that can help.
