--- a/adventures/misc.html
+++ b/adventures/misc.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-04-09 Sat 15:29 -->
+<!-- 2022-04-13 Wed 19:17 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Adventures - Miscellaneous</title>
@@ -219,13 +219,13 @@ Footer" />
     </div>
   </nav>
   <header>
-    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/Sola_lucky_Box_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
+    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/PatchnotesNA_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
       <div class="container newsbox">
       <div class="row">
         <div class="col-12">
-          <h1 class="text-center">[Offer] Solar Class Lucky Box!</h1>
-          <p class="text-center">Blazing path wherever you go!</p>
-          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/offer_solar_class_lucky_box-832" target="new" role="button">Learn more</a></p>
+          <h1 class="text-center">Patch Notes (04.12)</h1>
+          <p class="text-center">Spring is here!</p>
+          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/patch_notes-241" target="new" role="button">Learn more</a></p>
         </div>
       </div>
       </div>
