--- a/guides/lvling/newblets.html
+++ b/guides/lvling/newblets.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-04-20 Wed 18:15 -->
+<!-- 2022-04-29 Fri 11:31 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Leveling Your Newblets</title>
@@ -219,13 +219,13 @@ Footer" />
     </div>
   </nav>
   <header>
-    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/AuraSale.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
+    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/EasterLBWeb.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
       <div class="container newsbox">
       <div class="row">
         <div class="col-12">
-          <h1 class="text-center">[Offer] Direct Purchase : Aura of Experience</h1>
-          <p class="text-center">More experience to your journey!</p>
-          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/offer_direct_purchase__aura_of_experience_-383" target="new" role="button">Learn more</a></p>
+          <h1 class="text-center">[Offer] Easter weapon Lucky Box x3 Chance</h1>
+          <p class="text-center">Keep the spirit of Easter always!</p>
+          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/offer_easter_weapon_lucky_box_x10_chance-413" target="new" role="button">Learn more</a></p>
         </div>
       </div>
       </div>
