--- a/guides/enhacement.html
+++ b/guides/enhacement.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-04-29 Fri 11:31 -->
+<!-- 2022-05-06 Fri 10:23 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Enhancement Guide</title>
@@ -219,13 +219,13 @@ Footer" />
     </div>
   </nav>
   <header>
-    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/EasterLBWeb.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
+    <div class="jumbotron" style="background-image: url('https://assets.frontend.gamigo.com/cms/24/news/voucher_codegeneral_web.png'); background-repeat: no-repeat; background-position: center; background-size: cover">
       <div class="container newsbox">
       <div class="row">
         <div class="col-12">
-          <h1 class="text-center">[Offer] Easter weapon Lucky Box x3 Chance</h1>
-          <p class="text-center">Keep the spirit of Easter always!</p>
-          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/offer_easter_weapon_lucky_box_x10_chance-413" target="new" role="button">Learn more</a></p>
+          <h1 class="text-center">[Offer] Real Money Voucher 05.06</h1>
+          <p class="text-center">A voucher as lovely as you!</p>
+          <p class="text-center"><a class="btn btn-primary btn-lg" href="https://fiesta.gamigo.com/us/news/offer_real_money_voucher_0506-912" target="new" role="button">Learn more</a></p>
         </div>
       </div>
       </div>
