--- a/fiesta-wiki.html
+++ b/fiesta-wiki.html
@@ -3,10 +3,10 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-04 Sat 19:46 -->
+<!-- 2022-06-04 Sat 19:49 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Yaya's World - Adventures - Miscellaneous</title>
+<title>Yaya's World - Fiesta Wiki is Dead</title>
 <meta name="author" content="Jon Saxton" />
 <meta name="description" content="My Fiesta and MMO Site
 Header
@@ -235,59 +235,20 @@ Footer" />
     <div class="row">
       <div class="col-lg-12 mb-4 mt-2 text-justify">
 
-<div id="ImgViewer" class="modal" tabindex="-1" role="dialog">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content modal">
-      <div class="modal-header">
-        <h5 class="modal-title" id="ImgTitle">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body text-center">
-        <img id="Img" alt="empty" style="max-width: 100%">
-      </div>
-    </div>
-  </div>
-</div>
-<body id="outline-container-orgb0fb805" class="outline-2">
-<h2 id="orgb0fb805">Miscellaneous Adventures</h2>
-<div class="outline-text-2" id="text-orgb0fb805">
+<body id="outline-container-org8618c20" class="outline-2">
+<h2 id="org8618c20">The Fiesta Wiki is Gone 😭</h2>
+<div class="outline-text-2" id="text-org8618c20">
 <p>
-Welcome to my general &ldquo;wall o&rsquo; ADVENTURE&rdquo;! This is where I will post <i>some</i> of my special screenshots from my various trips, quest, and other ADVENTUREs around Isya, the world of <a href="http://fiesta.gamigo.com/">Fiesta Online</a>.
+As of the 1 Jun 2022 the Fiesta Wiki, which is a site we linked to a lot so you can get more detailed information on quests and other aspects of Fiesta Online, is gone. I don&rsquo;t have hard evidence or firsthand information on exactly what has happened, but according to some of my guildies the developer is leaving Fiesta and no longer wants to support the project. This wiki had a <b>LOT</b> of very useful information about alchemy, quests, items, and more in the game and it will be sad to lose it all. So far this is still just a distant possibility. Though the wiki is currently offline (only a 404 error in its place), we believe the developer is looking at solutions to get this back.
 </p>
 
-<div class="container ">
-      <div class="row">
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="thumb rounded-circle" title="Helping my Friend's Mage" alt="Cleric helping Mage" style="width: 140px; height: 140px;" src="Cleric+Mage.png" data-holder-rendered="true">
-          <p>My favorite ADVENTUREs are adventures helping friends, like helping this mage 😉</p>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="thumb rounded-circle" title="Playing on the Beach" alt="Beach Day Fun" style="width: 140px; height: 140px;" src="./BeachDayFuns.png" data-holder-rendered="true">
-          <p>I'm playing with my newblet BabyYayo on the beach!</p>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="thumb rounded-circle" title="Matching Swimsuits" alt="Matchy Beach Day" style="width: 140px; height: 140px;" src="./MatchyBeachDay.png" data-holder-rendered="true">
-          <p>We're wearing matching swimsuits.</p>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="thumb rounded-circle" title="Tired After Beach Day" alt="Tired After Beach Day" style="width: 140px; height: 140px;" src="./TiredAfterBeachDay.png" data-holder-rendered="true">
-          <p>We got tired from all the playing.</p>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="thumb rounded-circle" title="New Hamster Mount" alt="New Hamster Mount" style="width: 140px; height: 140px;" src="./HamsterFos2.png" data-holder-rendered="true">
-          <p>My Cleric used attendance stamps to get a new mount.</p>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="thumb rounded-circle" title="New King Crab" alt="New King Crab" style="width: 140px; height: 140px;" src="./RidingKingCrab.png" data-holder-rendered="true">
-          <p>Baby won a King Crab mount!</p>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="thumb rounded-circle" title="Baby's King Crab is Baby-sized" alt="King Crabs" style="width: 140px; height: 140px;" src="./KingCrabz.png" data-holder-rendered="true">
-          <p>But, its baby-sized.</p>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="thumb rounded-circle" title="What happened!? Where am I!?" alt="Where am I?" style="width: 140px; height: 140px;" src="./WhereAmI.png" data-holder-rendered="true">
-          <p>What happened!? Where am I!? Is this haven?</p>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 text-center"> <img class="thumb rounded-circle" title="Crazy and Fun Event" alt="OMFG" style="width: 140px; height: 140px;" src="./OMFG.png" data-holder-rendered="true">
-          <p>This was one crazy 😵‍💫, but fun GM event.</p>
-        </div>
-      </div>
-    </div>
+<p>
+I have also been informed that Google does have most, if not all, of the site cached. Much of the functionality of the site would be lost by the cache process, but the data should all be available. If I can retrieve this, and the developer cannot come up with a solution to get the site up, I will be attempting recreate as much of it as I can here.
+</p>
+
+<p>
+Watch this page for future details. I&rsquo;ll also put up a forum post or something, but my forums are basically dead right now, so just look at this page probably 😅
+</p>
 
   </div>
 </div>
@@ -301,18 +262,6 @@ Welcome to my general &ldquo;wall o&rsquo; ADVENTURE&rdquo;! This is where I wil
     </div>
   </div>
 </footer>
-<script language="javascript" type="text/javascript">
-  $("img.thumb").click(function ( event ){
-    var src=$(this).attr('src');
-    var title=$(this).attr('title');
-
-    $("#ImgTitle").text(title);
-    $("#Img").attr('alt',title)
-    $("#Img").attr('src',src);
-
-    $("#ImgViewer").modal('show');
-     }).css('cursor','pointer');
-</script>
 </div>
 </body>
 </div>
