--- a/guides/lvling/fledgling.html
+++ b/guides/lvling/fledgling.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-17 Fri 10:50 -->
+<!-- 2022-06-20 Mon 20:39 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yaya's World - Guides - Leveling Your Fledgling Adventurer</title>
@@ -289,7 +289,7 @@ for some reason:
 <li>Level 84-88 - Kidmon Rep - &ldquo;Hans in Love&rdquo;</li>
 <li>Level 85-88 - Toy Spade Rep - &ldquo;Kidmon The Menance&rdquo;</li>
 <li>Level 86-89 - Jewel Tree Rep - &ldquo;Tree of Jewels&rdquo;</li>
-<li>Level 88-90 - Red Nix Rep - &ldquo;A Tree With Holes&rdquo;</li>
+<li>Level 89-90 - Lava Gargoyle Rep - &ldquo;Attack of the Lava Gargoyles&rdquo;</li>
 </ol>
 </div>
 </div>
